--- a/Lucke/.gitignore
+++ b/Lucke/.gitignore
@@ -1,20 +1,67 @@
-# Virtual environment
-venv/
-myenv/
-.env/
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
 
-# Python cache files
+# C extensions
+*.so
+
+# Distribution / packaging
+.Python
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+*.egg-info/
+dist/
+build/
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# pyenv
+.python-version
+
+# dotenv
+.env
+
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# macOS
+.DS_Store
+
+# VSCode
+.vscode/
+
+# Django
+*.log
+*.pot
 *.pyc
 __pycache__/
-
-# Database files
 db.sqlite3
-
-# Static files
-staticfiles/
-
-# Backup files
+media
+staticfiles
+local_settings.py
 db.json
-
-# Environment variables
-.env
