--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,6 @@ django-heroku==0.3.1
 gunicorn==22.0.0
 psycopg2==2.9.9
 psycopg2-binary==2.9.9
+python-decouple==3.8
 sqlparse==0.5.0
 whitenoise==6.7.0
