--- a/lucke/.gitignore
+++ b/lucke/.gitignore
@@ -1,7 +1,7 @@
 # Virtual environment
 venv/
 myenv/
-.env/
+
 
 # Python cache files
 *.pyc
@@ -18,6 +18,7 @@ db.json
 
 # Environment variables
 env.py
+.env
 
 # side files
 templates/password/
