--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.8.1
 dj-database-url==2.2.0
 Django==5.0.6
 django-allauth==0.63.3
+django-crispy-forms==2.2
 django-heroku==0.3.1
 gunicorn==22.0.0
 psycopg2==2.9.9
